bzr-svn 0.6.0					UNRELEASED

bzr-svn 0.5.4					2009-04-08

  BUG FIXES

   * Ignore spurious commits setting tags to the same revision. (#342824)

   * Fix compatibility with Python2.4.

   * Improve error message if subvertpy can't be found. (#345067)

   * Cope with spaces in branch paths. (#348439)

   * Properly deal with pointless commits when branching the 
     repository root. (#348786)

   * dpush no longer sets custom bzr revision properties. (#351292)

   * Re-use passwords that have been prompted earlier. (#331073) 

   * Fix compatibility with Bazaar 1.14.

  FEATURES

   * A new content filter "svn-keywords" is now supported and behaves like 
     the svn:keywords Subversion file property.

   * Keywords and end of line properties in svn working copies are now honored. 
     (#81463)

   * Support override-svn-revprops = svn:author=author to allow svn:author to be 
     set to the author of a pushed revision rather than the committer. (#342979)


bzr-svn 0.5.3                   2009-03-10

  BUG FIXES

   * Lazily load commands during help. (#330928)

   * Fix one-line helps for dpush / foreign-mapping-upgrade. (#331051)

   * Skip unicode tests if the local file system doesn't support unicode 
     paths.

   * Don't print traceback when connection errors occur during push. (#331078)

   * Fix exception importing with itrunk* layout.

   * Break subversion locks in ``bzr break-lock''.

   * Handle corner case following branch paths outside of prefixes in 
     revision metadata browser.

   * Handle strange corner case in HTTP, where get_dir() works on files and we 
     accidently start to call update() on files.

   * Don't check branch root when looking for round-tripped revisions that used 
     revision properties. (#294784)

   * Support non-ascii characters in home directories. (#333121)

   * Fix recognizing tags when using wildcard layouts. (#333960)

   * Fetch left-hand side ancestry if it's outside of the prefix in